# smc

./: .gitmodules  README
blackboard/: kde-4.2.index.php.html
blackboard/ml/: about.po  installing.po  issues.po  moreinfo.po  old-stuff.po  release-notes.po  upgrading.po  whats-new.po
book/html/: book.html
bots/: eng-hin-bot.py  eng-mal-bot.py  mal-fort-twit.py  mandoos.py  twitter-mal-dict.py  wiktionary.py  wiktionary.sqlite
bots/dictionaries/: freedict-eng-hin.dict.dz  freedict-eng-hin.index
calendar/gnome/: README
calendar/kde/: README
chathans/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  chathans.desktop  chathans.glade  chathans.gladep  config.h  config.status  configure  configure.in
chathans/po/: Makefile  Makefile.in
chathans/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  copyright  interface.c  interface.h  main.c  my_Makefile  support.c  support.h
chathans/src/.deps/: callbacks.Po  interface.Po  main.Po  support.Po
collation/: iso14651_t1_common
dictionary/: README  dict-En-Ml-src.txt  dict-en-ml.dict.dz  dict-en-ml.index  dict-freedict-eng-mal-src.txt  dict-freedict-eng-mal.dict.dz  dict-freedict-eng-mal.index  freedict-eng-mal-src.txt  freedict-eng-mal.dict.dz
dictionary-tei/: dict2tei.pl
doc/chillu-presentation/: chillu.html  chillu.html~  cover~  smc.html~
doc/smc-presentation/: cover  smc.html  smc.html~
doc/unicode-presentation/: unicode.html  unicode.html~
fonts/: Makefile  malayalam-fonts.conf
fonts/Dyuthi/: Dyuthi.sfd  Dyuthi.sfd.tar.bz2
fonts/Kalyani/: Kalyani.sfd
fonts/Meera/: COPYING  Meera.sfd  README
fonts/Rachana/: LICENSE  README  Rachana-our_language_our_script.rtf  Rachana.sfd
fonts/RaghuMalayalamSans/: RaghuMalayalamSans.sfd
fonts/suruma/: suruma.sfd
fortune-ml/: fortune-ml  install.sh
fortune-ml/plasmoid/: install.sh  metadata.desktop
hyphenation/: ChangeLog  README  hyph_as_IN.dic  hyph_bn_IN.dic  hyph_gu_IN.dic  hyph_hi_IN.dic  hyph_kn_IN.dic  hyph_ml_IN.dic  hyph_mr_IN.dic  hyph_or_IN.dic  hyph_pa_IN.dic  hyph_ta_IN.dic  hyph_te_IN.dic
hyphenation/inkscape/: README  README~
hyphenation/tests/: malayalam-out.txt  malayalam.txt
hyphenation/web/: Hyphenator.js  example.html
input-methods/ibus-sulekha/: AUTHORS  Makefile.am  README  configure.ac
input-methods/ibus-sulekha/engine/: Makefile.am  autocomplete.py  factory.py  ibus-engine-sulekha  ibus-engine-sulekha.in  keymap.py  main.py  sulekha.py  sulekha.xml  sulekha.xml.in  sulekha.xml.in.in  trainer.py
input-methods/ibus-sulekha/engine/keymaps/: inscript_ml_IN  swanalekha_ml_IN
input-methods/lalitha/: base  base.lst  base.xml  in  install.sh
input-methods/lipimatoo/: BUILD  Transliteration.h  lipimatoo.c  trans.c  transliteration.c
input-methods/scim-inscript/: Makefile  Malayalam-inscript.txt.in
input-methods/sulekha/: AUTHORS  HACK  Makefile  Makefile.am  Makefile.in  Transliteration.c  Transliteration.h  config.h  config.h.in  config.status  configure  configure.ac  googliterate.c  sugg.txt  sulekha.c  transliteration.h
input-methods/sulekha/autom4te.cache/: output.0  output.1  output.2  output.3  output.4  output.5  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
input-methods/sulekha/src/: Makefile  Makefile.am  Makefile.am~  Makefile.in  suggestions.c~  sulekha.c  sulekha.c~  sulekhaspell.c  sulekhaspell.c~  sulekhaspell.h  sulekhaspell.h~  trans.c  trans.c~  transliteration.c  transliteration.c~  transliteration.h~
input-methods/sulekha/src/.deps/: sulekha.Po  sulekhaspell.Po  transliteration.Po
input-methods/swanalekha/: COPYING  COPYRIGHT  Makefile
input-methods/swanalekha-js/: swanalekha-ml.html  swanalekha-ml.js  swanalekha-ta.html  swanalekha-ta.js
l10n-qa/: TODO  ml-error-patterns.txt  smc-l10n-qa.sh
payyans/: PKG-INFO  setup.py
payyans-doc-converter/: oorunner.py  payyans-doc-converter.py
payyans/docs/: ChangeLog  README
payyans/maps/: ambili.map  indulekha.map  revathi.map  shree.map
payyans/payyans/: __init__.py  payyan.py  payyans
payyans/tests/: test.py
proverb/: .directory  INSTALL  icons.qrc  install  proverb.pro  proverb_ml.qm  proverb_ml.ts  uninstall  പഴഞ്ചൊല്ല്.desktop
proverb/src/: main.cpp  main.cpp~  mainwindow.cpp  mainwindow.h  tabdialog.cpp  tabdialog.h
proverb/ui/: about.ui  mainwindow.ui
pychathans/: chathans.desktop  chathans.py  install.sh  setup.py
pychathans/doc/: README
pychathans/po/: chathans-ml.po  chathans.pot
pychathans/src/: __init__.py
pykuttans/: Makefile  README  kuttans.desktop  kuttans.spec
pykuttans/qrc/: kuttans.qrc
pykuttans/src/: __init__.py  kuttans  kuttans.py  kuttans_main.py  kuttans_rc.py  kuttans_ui.py
pykuttans/ui/: kuttans.ui
roughbook/: index.php
silpa/: __init__.py  index.py  services.py  silpa.conf  silpa.py
silpa/common/: PyMeld.py  __init__.py  modulemanager.py  silpamodule.py  silparesponse.py
silpa/css/: main.css
silpa/doc/: credits.html  todo.html
silpa/jsonrpc/: cgiwrapper.py  serviceHandler.py
silpa/modules/: __init__.py
silpa/templates/: __init__.py  base.py
silpa/utils/: __init__.py  langdetect.py  silpautils.py
silpa/www/: index.py  silpa.conf
soundex/: soundex.py
speech/sharika/: Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
speech/sharika/lang/: Makefile.am  Makefile.in  mdef  means  mixture_weights  parser.sh  sharika.dic  sharika.fsg  variances
speech/sharika/lang/model/: ADUTHATHU.chmm  CHURUKKU.chmm  EAZHUTHIDAM.chmm  EMACS.chmm  Makefile.am  Makefile.in  PADU.chmm  SAMAYAM.chmm  SIL.chmm  VALAPARATHU.chmm  VALUTHAKKU.chmm  map  mdef  means  mixture_weights  noisedict  phone  variances
speech/sharika/src/: Makefile.am  Makefile.in  main.c
(+151 files in other folders)
